# air-quality-dt

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
api/: __init__.py  main.py
app/: streamlit_app.py
config/: settings.yaml
config/sensors/: sensor_PEDT.json
docs/: METHODOLOGY.md  USER_GUIDE.md
scripts/: build_datasets.py  download_data.py  ingest_mqtt.py  run_pipeline.py
src/unisa_air_twin/: __init__.py  arpac.py  config.py  gis.py  live_sensors.py  logging_utils.py  model.py  osm.py  scenario.py  sensors.py  storage.py  ui_data.py  utils.py  validation.py  weather.py  zones.py
tests/: test_arpac_metadata.py  test_column_normalization.py  test_gis.py  test_live_sensors.py  test_model.py  test_scenario.py  test_validation.py  test_zones.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css
