[project]
name = "unisa-air-quality-digital-twin"
version = "0.1.0"
description = "MVP Urban Digital Twin for air quality around University of Salerno, Campus di Fisciano."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "duckdb>=0.10",
  "geopandas>=0.14",
  "osmnx>=1.9",
  "pandas>=2.1",
  "plotly>=5.20",
  "pyarrow>=15",
  "pydantic>=2.6",
  "pydeck>=0.8",
  "pyproj>=3.6",
  "pyyaml>=6.0",
  "requests>=2.31",
  "ruff>=0.4",
  "shapely>=2.0",
  "streamlit>=1.33",
  "pytest>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

